Changelog 0.7.0.1
-----------------
[NO-TICKET] MediaPlayer: improved the cover loading speed on slow hardware
[SA-00402] MediaPlayer: add the album to the search results and favorites view
[NO-TICKET] the facebook status is persited on the client for one month (before it was only one week)
[SA-00403] SallyAPI: MS_SALLY_MUTE_SOUND / MS_SALLY_UNMUTE_SOUND: the message send to the app should be a different than the message send to sally
[SA-00404] ImageBrowser: change the second field from CEdit to CNumberSelector
[SA-00396] MediaPlayer: several small suggestions
+ facebook pop-up notifyer - send message after 50% played
+ edit ID3-tags in the application
[NO-TICKET] MediaPlayer / ImageBrowser: increased history to 40
[SA-00400] SallyAPI: logger should use critical section for writing to files
[SA-00406] SallyAPI: PopUp options - close on any click
[SA-00407] Sally: auto hide VolumeControl after 15 sec
[SA-00000] SallyAPI: UI Controls
+ ContextMenu
[SA-00411] MediaPlayer: extend facebook like message with album and year if available
[SA-00409] MediaPlayer: dbcreate scheduler: should be possible to turn on / off
[SA-00410] ImageBrowser: dbcreate scheduler: should be possible to turn on / off
[SA-00275] SallyAPI: white line on the right and on the bottom
[SA-00408] SallyAPI: clean SpritInterface painting
[SA-00249] SallyAPI: Font anti aliasing
[SA-00414] MediaPlayer: rework the MediaPlayer technical implementation
[SA-00353] Release 0.7.0.0 Tasks
+ SallyAPI: fonts are drawn ugly
+ Sally hangs when closing the app


Changelog 0.6.6.1
-----------------
[SA-00333] MediaPlayer: crash on slow hardware
[SA-00230] Sally: flash controls to make a visual feedback for the mouse up


Changelog 0.6.5.10
------------------
[SA-00314] Sally Tools: Tools improvements
+ redesign the config dialog
+ make menu icons smaller
+ invert on / off logic for applications
+ on installation error refer to the homepage
+ source cleanup
[SA-00394] MediaPlayer: Improve Album Browser